--- a/TableEditor/Views/MainWindow.xaml
+++ b/TableEditor/Views/MainWindow.xaml
@@ -29,6 +29,7 @@
                 <StackPanel x:Name="RegistrationForm" Visibility="Collapsed">
                     <TextBox x:Name="TextBoxLogin" materialDesign:HintAssist.Hint="Login" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                     <PasswordBox x:Name="PasswordBox" materialDesign:HintAssist.Hint="Password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <TextBlock x:Name="MinimalOne" Text="Пароль должен содержать минимум 6 символов" FontSize="10" Margin="0 0 0 20" Foreground="DimGray"/>
                     <PasswordBox x:Name="RepeatPasswordBox" materialDesign:HintAssist.Hint="Repeat password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
                     <TextBox x:Name="TextBoxKeyword" materialDesign:HintAssist.Hint="Key word" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                     <Button Content="Registration" Margin="0 20" Click="Button_Reg_Click"/>
@@ -37,6 +38,7 @@
                 <StackPanel x:Name="AuthForm" Visibility="Visible">
                     <TextBox x:Name="LoginField" materialDesign:HintAssist.Hint="Login" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                     <PasswordBox x:Name="PasswordField" materialDesign:HintAssist.Hint="Password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <TextBlock x:Name="MinimalTwo" Text="Пароль должен содержать минимум 6 символов" FontSize="10" Margin="0 0 0 20" Foreground="DimGray"/>
                     <CheckBox x:Name="RememberAuth" Content="Remember" FontWeight="Bold" Foreground="White" Margin="0 20 0 0"/> 
                     <Button Content="Login" Margin="0 20" Click="Button_Auth_Click"/>
                 </StackPanel>
